...
    <string name="password_label">Password</string>
    <string name="login_button_text">Login</string>
    <string name="choose_language_label">Select a language</string>
    <string name="greeting_text">Welcome back, %1$s</string>
    <string name="tab_icon_rankings_title">Rankings</string>
    <string name="tab_icon_menu_title">Menu</string>
    <string name="all_languages_spinner_option">All languages</string>
    <string name="login_dialog_title">Please, wait</string>
    <string name="login_dialog_message">Verifying credentials…</string>
    <string name="warning_invalid_credentials">Invalid username or password</string>
    <string name="warning_connection_error">Connexion error, please verify your internet connection</string>
    <string name="warning_request_error">An error happened processing your request, please verify your internet connexion and try again</string>
    <string name="update_ranking_success_message">Rankings updated</string>
...
    <string name="warning_email_required">Email is required</string>
    <string name="warning_email_format_required">Input needs to be an email</string>
    <string name="update_account_dialog_message">Updating your account…</string>
    <string name="creating_account_dialog_message">Creating account…</string>
    <string name="badges_header_text">Badges:</string>
    <string name="score_header_text">Performance in our games:</string>
    <string name="remove_from_favorite_words">Remove from favorites</string>
    <string name="add_to_favorite_words">Add to favorites</string>
    <string name="error_removing_word_from_favorites">Error when trying to remove word from favorites.</string>
    <string name="error_adding_word_to_favorites">Error when trying to add word to favorites.</string>
    <string name="search_with_filters">Filter</string>
    <string name="error_game_score">Something went wrong</string>
    <string name="current_game_score">Your current score is %1$d</string>
...
