...
        android:id="@+id/action_login_logout"
        android:icon="@drawable/ic_login"
        android:title="@string/tab_icon_login_title"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_menu"
        android:icon="@drawable/ic_menu"
        android:title="@string/tab_icon_menu_title"
        app:showAsAction="ifRoom"/>

</menu>
